# ipc-channel

./: Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
benches/: ipc.rs  ipc_receiver_set.rs  ipc_shared_mem.rs  platform.rs
lib-linux/: build.zig  build.zig.zon
lib-linux/src/: root.zig
src/: error.rs  ipc.rs  lib.rs  router.rs  test.rs  util.rs
src/platform/: mod.rs  test.rs
src/platform/inprocess/: mod.rs
src/platform/macos/: mach_sys.rs  mod.rs
src/platform/unix/: lib_linux.rs  mod.rs
src/platform/windows/: mod.rs  tests.rs
zig/: build.zig  build.zig.zon
zig/src/: c.zig  common.zig  macos.zig  os.zig  root.zig  sys_tests.zig  util.zig
zig/src/macos/: bootstrap.zig  mach.zig
zig/src/os/: macos.zig  unix.zig
zig/src/os/macos/: bootstrap.zig  mach.zig
