[package]
name = "ipc-channel"
version = "0.20.0"
description = "A multiprocess drop-in replacement for Rust channels"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/ipc-channel"
edition = "2024"

[[bench]]
name = "platform"
harness = false

[[bench]]
name = "ipc"
harness = false

[[bench]]
name = "ipc_receiver_set"
harness = false

[[bench]]
name = "ipc_shared_mem"
harness = false

[features]
default = []
win32-trace = []
unix-on-wine = []

[dependencies]
bytecheck = "0.8.1"
rkyv = "0.8.10"
thiserror = "2.0.12"

fastrand = "2.3"
itoa = "1.0.15"

[target.'cfg(not(target_os = "windows"))'.dependencies]
rustix = { version = "1", features = ["process"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61.1"
features = [
	"Win32_Foundation",
	"Win32_System_WindowsProgramming",
	"Win32_System_Threading",
	"Win32_System_Pipes",
	"Win32_System_Memory",
	"Win32_System_IO",
	"Win32_Storage_FileSystem",
	"Win32_Security",
]

[dev-dependencies]
crossbeam-utils = "0.8"
static_assertions = "1.1.0"
criterion = { version = "0.6", features = ["html_reports"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }
